--- a/src/pug/sections/blog/_article-content.pug
+++ b/src/pug/sections/blog/_article-content.pug
@@ -75,3 +75,17 @@ section.single-article
 				p В контексте долговечности и комфорта использования, несъемные протезы часто выигрывают соревнование. Они могут служить десятилетиями при правильном уходе и регулярных посещениях стоматолога, в то время как съемные протезы могут потребовать замены или корректировки через несколько лет. Комфорт несъемных протезов также выше, поскольку они не двигаются во рту и не вызывают дискомфорта, связанного с трением о десны или риском выпадения в неподходящий момент.
 				p Однако протезирование зубов несъемными конструкциями может оказывать большее влияние на здоровье оставшихся зубов и десен. Например, для установки моста необходимо обтачивать соседние зубы, что может привести к их ослаблению. Имплантаты же требуют хирургического вмешательства и длительного восстановления, но при этом не оказывают давления на соседние зубы. Съемные протезы в этом плане менее инвазивны, но они могут способствовать атрофии костной ткани и вызывать раздражение десен при неправильном использовании или ношении.
 			
+				.article-footer
+					h2 Кто работал над статьей
+					.article-footer-row.flex
+						.article-author.flex
+							.article-author__img
+								img(src='./img/blog/author.webp', srcset='./img/blog/author@2x.webp 2x' width='92' height='92' loading='lazy' alt='img')
+							.article-author__txt
+								.txt-16 Соболев Андрей Андреевич
+								.txt-12 Врач стоматолог-ортопед
+						// back link
+						a(href="blog.html").flex-link
+							svg.svg-larr
+								use(href='./img/sprite.svg#svg-larr')
+							span вернуться
