--- a/src/scss/sections/_promo-main.scss
+++ b/src/scss/sections/_promo-main.scss
@@ -41,8 +41,8 @@
 			height: remy(663);
 		}
 		@media (max-width: 767px) {
-			width: calc((361 / 4.02)*1vw);
-			height: calc((246 / 4.02)*1vw);
+			width: 361px;
+			height: 246px;
 			
 		}
 	}	
