--- a/src/pug/sections/blog/_promo-blog-article.pug
+++ b/src/pug/sections/blog/_promo-blog-article.pug
@@ -5,7 +5,7 @@
 				li
 					a(href="#!") Newlinedent
 				li
-					a(href="#!") блог
+					a(href="blog.html") блог
 	
 	.promo-blog-wrapper
 		.container
