--- a/src/scss/sections/_blog-article.scss
+++ b/src/scss/sections/_blog-article.scss
@@ -68,8 +68,8 @@
 		margin-right: auto;
 		
 	}
-	*+*{margin-top: 27px;}
-	*+h2, *+h3{
+	.article-text>*+*{margin-top: 27px;}
+	.article-text>*+h2,.article-text> *+h3{
 		margin-top: 54px;
 	}
 	ul, ol{padding-left: 30px; li+li{margin-top: 2px;}}
@@ -86,7 +86,7 @@
 		.rotate-image{
 			flex-shrink: 0;position: relative; .img-caption{font-size: 6px;}
 			width: 288px;
-			height: 426px;
+			height: 349px;
 		}
 		.rotate-image:first-child{
 			transform: rotate(18.89deg) translate(26px, 28px);
@@ -107,20 +107,21 @@
 			font-size: remy(25);
 			margin-bottom: remy(27);	
 		}
-		*+*{margin-top: remy(27);}
-		*+h2, *+h3, *+h4{
+		.article-text>*+*{margin-top: remy(27);}
+		.article-text>*+h2, .article-text>*+h3, .article-text>*+h4{
 			margin-top: remy(54);
 		}
 		ul, ol{padding-left: remy(30);}
 		.rotate-image-group{
 			display: flex;
+			align-items: flex-start;
 			justify-content: center;
 			padding-bottom: 5.5vw;
 			
 			.rotate-image{
 				flex-shrink: 0;position: relative; .img-caption{font-size: remy(6);}
 				width: remy(288);
-				height: remy(426);
+				height: remy(349);
 			}
 			.rotate-image:first-child{
 				transform: rotate(18.89deg) translate(remy(26), remy(28));
@@ -143,19 +144,19 @@
 			font-size: 18px;
 			line-height: 111%;
 		}
-		*+*{margin-top: 27px;}
-		*+h2, *+h3{
+		.article-text>*+*{margin-top: 27px;}
+		.article-text>*+h2, .article-text>*+h3{
 			margin-top: 54px;
 		}
 		ul, ol{padding-left: 20px; li+li{margin-top: 2px;}}
 		.rotate-image-group{
 			padding-bottom: 40px;
-			img{
-				width: 109px;
-				height: 119px;
+			.rotate-image{
+				width: 115px;
+				height: 137px;
 			}
 			.rotate-image:first-child{
-				transform: rotate(18.89deg) translate(17%, 10%);
+				transform: rotate(18.89deg) translate(21%, 6%);
 				
 			}
 			.rotate-image:nth-child(2){
@@ -286,5 +287,44 @@
 		padding-left: 20px;
 		padding-right: 20px;
 		height: 45px;
+	}
+}
+.article-footer-row{
+	justify-content: space-between;
+	.flex-link{
+		font-weight: 600;
+		font-size: 20px;
+		line-height: 110%;
+		color: #2e3033;
+		@media (min-width: 768px) and (max-width: 1919px) {font-size: remy(20);}
+	}
+	@media (max-width: 767px) {
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	row-gap: 27px;
+	}
+}
+.article-author{
+	column-gap:16px;
+	max-width: 300px;
+	&__img{
+		width: 92px;
+		height: 92px;
+		overflow: hidden;
+		border-radius: 50%;
+		flex-shrink: 0;
+		img{
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+		}
+	}
+	@media (min-width: 768px) and (max-width: 1919px) {
+		column-gap:remy(16);
+		&__img{
+			width: remy(92);
+			height: remy(92);
+		}
 	}
 }
