--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,6 +18,7 @@ block content
 			a(href="hygiene.html") Гигиена
 			a(href="surgery.html") Хирургия
 			a(href="orthopedics.html") Ортопедия
+			a(href="contacts.html") Контакты
 
 block variables
 	-var title = "NewLineDent";
