--- a/src/pug/pages/review.pug
+++ b/src/pug/pages/review.pug
@@ -7,7 +7,7 @@ block content
 			.breadcrumbs-wrapper
 				ul.breadcrumbs
 					li
-						a(href="#!") Newlinedent
+						a(href="index.html") Newlinedent
 					li
 						a(href="blog.html") Блог
 		include ../sections/page-review/_review-section
