--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -14,18 +14,18 @@ footer.footer
 						p ст.м. "Новочеркасская", ул. Стахановцев, д. 6
 						p пн-вс: 9:00 — 21:00
 					
-					.footer-links.flex-col
-						a(href="#").contact-link.flex
+					.footer-links.contacts-block
+						a(href="tel:+79999999999").contact-link.flex
 							.contact-link__icon
 								img(src='./img/phone-solid.svg' width='24' height='24' loading='lazy' alt='img')
 							span +7 (999) 999-99-99
 						
-						a(href="#").contact-link.flex
+						a(href="tel:+79999999999").contact-link.flex
 							.contact-link__icon
 								img(src='./img/phone-solid.svg' width='24' height='24' loading='lazy' alt='img')
 							span +7 (999) 999-99-99
 						
-						a(href="#").contact-link.flex
+						a(href="mailto:nld-12@mail.ru").contact-link.flex
 							.contact-link__icon
 								img(src='./img/envelope-solid.svg' width='24' height='24' loading='lazy' alt='img')
 							span nld-12@mail.ru
@@ -63,23 +63,23 @@ footer.footer
 						li
 							a(href="#!") Терапия
 						li
-							a(href="#!") Имплантология
+							a(href="implantation.html") Имплантология
 						li
 							a(href="#!") Несъемное протезирование
 						li
 							a(href="#!") Эстетическая стоматология
 						li
-							a(href="#!") Отбеливание зубов
+							a(href="whitening.html") Отбеливание зубов
 						li
 							a(href="#!") Ортодонтия
 						li
-							a(href="#!") Хирургия
+							a(href="surgery.html") Хирургия
 						li
-							a(href="#!") Ортопедия
+							a(href="orthopedics.html") Ортопедия
 						li
 							a(href="#!") Съемное протезирование
 						li
-							a(href="#!") Профилактика и гигиена
+							a(href="hygiene.html") Профилактика и гигиена
 				//MENU LIST
 				nav.footer-nav
 					.footer-nav__title О нас 
@@ -95,7 +95,7 @@ footer.footer
 						li
 							a(href="blog.html") блог
 						li
-							a(href="#!") контакты 
+							a(href="contacts.html") Контакты контакты 
 						
 	//FOOTER-BOTTOM
 	.footer-bottom
