--- a/src/pug/sections/page-about/_promo.pug
+++ b/src/pug/sections/page-about/_promo.pug
@@ -6,7 +6,7 @@
 		.container
 			ul.breadcrumbs
 				li
-					a(href="#!") Newlinedent
+					a(href="index.html") Newlinedent
 				li
 					a(href="#!") О компании
 	
