--- a/src/pug/pages/service-page.pug
+++ b/src/pug/pages/service-page.pug
@@ -7,7 +7,7 @@ block content
 			.container
 				ul.breadcrumbs
 					li
-						a(href="#!") Newlinedent
+						a(href="index.html") Newlinedent
 					li
 						a(href="blog.html") Блог
 		
