--- a/src/pug/sections/_header-main-page.pug
+++ b/src/pug/sections/_header-main-page.pug
@@ -1,6 +1,6 @@
 //HEADER
 header.header.header--primary
-	.container
+	.container.sm-100
 		.header-content.flex
 			a(href="index.html").logo
 				svg.svg-logo
@@ -26,7 +26,7 @@ header.header.header--primary
 						li
 							a(href="about.html") о нас
 						li
-							a(href="#!") Контакты
+							a(href="contacts.html") Контакты
 						
 					
 					
