--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -26,7 +26,7 @@ header.header
 						li
 							a(href="about.html") о нас
 						li
-							a(href="#!") Контакты
+							a(href="contacts.html") Контакты
 						
 					
 					.address-block
