--- a/src/pug/sections/promos/_promo-orthopedics.pug
+++ b/src/pug/sections/promos/_promo-orthopedics.pug
@@ -3,7 +3,7 @@
 		.breadcrumbs-wrapper
 			ul.breadcrumbs
 				li
-					a(href="#!") Newlinedent
+					a(href="index.html") Newlinedent
 				li
 					a(href="service-page.html") услуги
 				li
