--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,6 +38,7 @@
 @use "sections/_promo-special.scss";
 @use "sections/_blog.scss";
 @use "sections/_blog-article.scss";
+@use "sections/_contacts.scss";
 
 
 
