--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -80,6 +80,7 @@
 	@media (max-width: 767px) {
 		.logo{width: 164px; height: 26px;}
 		height: 52px;
+		
 	}
 }
 .header-menu{
@@ -242,7 +243,7 @@
 	transition: top 0.2s linear, -webkit-transform 0.2s ease-in 0.2s;
 	transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
 	transition: top 0.2s linear, transform 0.2s ease-in 0.2s, -webkit-transform 0.2s ease-in 0.2s;
-	background-color: #2E3033;
+	background-color: #2E3033!important;
   }
   .menu-toggle.active span::before {
 	-webkit-transform: rotate(45deg);
