--- a/src/pug/sections/_feedback.pug
+++ b/src/pug/sections/_feedback.pug
@@ -25,6 +25,7 @@ section.feedback
 						span.fake-placeholder Телефон
 						input.form-input(type="tel" name="phone")
 					.form-btn.flex
+						//что бы кнопка стала не активной, надо добавиь атрибут disabled
 						button.btn-primary(type="submit")
 							span Оставить заявку 
 							svg.svg-rarr
