--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -104,3 +104,4 @@
 .text-btn.btn--accent{
    border-color: white;
 }
+button[disabled]{background-color: #f6f6f6!important; border-color:#f6f6f6!important;}
