--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -20,13 +20,14 @@
 			padding-left: remy(16);
 		    padding-right: remy(16);
 		    padding-top: remy(11);
+			border-radius: remy(24);
 		}
 	}
-	input:focus{
+	input:focus,textarea:focus{
 		border: 1px solid #C71647;
 		caret-color : #C71647;
 	}
-	input[disabled]{background-color: #f6f6f6;}
+	input[disabled]{background-color: #f6f6f6!important;}
 	.fake-placeholder{
 		font-size: 14px;
 		color: #616161;
@@ -45,6 +46,17 @@
 	
 	textarea{
 		padding: 16px;
+		padding-top: 24px;
+		height: 150px;
+		resize: none;
+		
+		@media(min-width:768px) and (max-width: 1919px){height: remy(150);
+			padding: remy(16);
+			padding-top: remy(24);
+		}
+		@media (max-width: 767px) {
+		height: 87px;
+		}
 	}
 }
 .form-item.input-focus{
