--- a/src/scss/sections/_contacts.scss
+++ b/src/scss/sections/_contacts.scss
@@ -3,14 +3,14 @@
 	position: relative;
 	overflow: hidden;
 	padding-bottom: 76px;
-	.title-36{margin-bottom: 40px;}
+	.title-36{margin-bottom: 40px; text-transform: uppercase;}
 	
 	@media (max-width: 1919px) {
 		padding-bottom: remy(76);
 		.title-36{margin-bottom: remy(40);}
 	}
 	@media (max-width: 767px) {
-		.title-36{margin-bottom: 40px;}
+		.title-36{margin-bottom: 40px; text-transform: unset;}
 	}
 }
 .promo-contacts-col{
@@ -18,9 +18,19 @@
 	width: 541px;
 	flex-shrink: 0;
      padding-top: 75px;
-	 @media(max-width: 768px) and (max-width: 1919px) {width: remy(541);row-gap:remy(80);}
+	 .contact-form .form-btn{
+		padding-top: 24px;
+	 }
+	 @media(min-width: 768px) and (max-width: 1919px) {
+		width: remy(541);row-gap:remy(80);
+		.contact-form .form-btn{padding-top: remy(24)}
+	}
 	 @media (max-width: 767px) {
 		width: 100%;
+		padding-top: 20px;
+		row-gap: 60px;
+		.title-36{font-size: 18px;}
+		.promo-contacts-form .title-36{text-align: center;}
    }
 }
 .promo-contacts-grid{
@@ -50,7 +60,7 @@
 		color: #2e3033;
 	}	
 	
-	@media(max-width: 768px) and (max-width: 1919px) {
+	@media(min-width: 768px) and (max-width: 1919px) {
 		
 		&>*+*{margin-top: remy(16);}
 		
@@ -67,7 +77,7 @@
 	line-height: 133%;
 	color: #2e3033;
 	padding-top: 8px;
-	@media(max-width: 768px) and (max-width: 1919px) {
+	@media(min-width: 768px) and (max-width: 1919px) {
 		font-size: remy(18);padding-top: remy(8);
 	}
 }
@@ -108,10 +118,17 @@
 	@media (max-width: 1919px) {
 		width: remy(1009);
 		height: remy(984);
+		.rotate-image{
+			width:remy(403);
+			height: remy(483);
+			
+		}
 	}
 	@media (max-width: 767px) {
 		width: 100%;
 		border-left: 0;
+		.rotate-image{
+			width: 150px;height: 180px;}
 	}
 }
 
@@ -143,4 +160,18 @@
 		display: none;
 		}
 	}
+}
+.promo-contacts-image.visible-sm:after{
+	@media (max-width: 767px) {
+	     display: block;
+		 height: 243px;
+	}
+} 
+.promo-contacts-text .promo-contacts-image{
+	@media (max-width: 767px) {
+		position: relative;
+		width: 100%;
+		height: 360px;
+	}
+	
 }
