--- a/src/pug/sections/_service-page-content.pug
+++ b/src/pug/sections/_service-page-content.pug
@@ -9,7 +9,7 @@ mixin servCard(imgSrc, title, par='Хирургическое лечение и 
 		
 		.accordion-group
 			.accordion-header.flex
-				p #{title}
+				p Услуги направления
 				span
 				.acc-icon
 				
