--- a/src/pug/sections/implantation/_promo.pug
+++ b/src/pug/sections/implantation/_promo.pug
@@ -50,11 +50,11 @@
 						.implant-card__top.flex
 							.implant-card__title
 								.implant-card__logo
-									img(src='./img/service/implant-logo.webp', srcset='../img/service/implant-logo@2x.webp 2x' width='141' height='37' loading='lazy' alt='img')
+									img(src='./img/service/implant-logo.webp', srcset='./img/service/implant-logo@2x.webp 2x' width='141' height='37' loading='lazy' alt='img')
 								.title-20 ASTRA TECH
 								p Швеция
 							.implant-card__img
-								img(src='./img/service/implant.webp', srcset='../img/service/implant@2x.webp 2x' width='157' height='128' loading='lazy' alt='img')
+								img(src='./img/service/implant.webp', srcset='./img/service/implant@2x.webp 2x' width='157' height='128' loading='lazy' alt='img')
 						
 						.implant-card__footer
 							.implant-card__footer-top
@@ -70,11 +70,11 @@
 						.implant-card__top.flex
 							.implant-card__title
 								.implant-card__logo
-									img(src='../img/service/implant-logo.webp', srcset='../img/service/implant-logo@2x.webp 2x' width='141' height='37' loading='lazy' alt='img')
+									img(src='./img/service/implant-logo.webp', srcset='./img/service/implant-logo@2x.webp 2x' width='141' height='37' loading='lazy' alt='img')
 								.title-20 ASTRA TECH
 								p Швеция
 							.implant-card__img
-								img(src='../img/service/implant.webp', srcset='../img/service/implant@2x.webp 2x' width='157' height='128' loading='lazy' alt='img')
+								img(src='./img/service/implant.webp', srcset='./img/service/implant@2x.webp 2x' width='157' height='128' loading='lazy' alt='img')
 						
 						.implant-card__footer
 							.implant-card__footer-top
