--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -161,6 +161,7 @@ form.flex-col{
 	padding: 16px 24px;
 	height: 50px;
 	text-align: left;
+	color:inherit;
 	cursor: pointer;
 	z-index: 3;
 	 @media (max-width: 1919px) {
