--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -31,7 +31,7 @@
 	width: 48px;
 	display: flex;
 	align-items: center;
-	
+	&[ddisabled]{background-color: #fff; opacity:.5;} 
 }
 .svg-logo, .svg-logoDark{
 	width: 267px;
