--- a/src/pug/pages/therapy.pug
+++ b/src/pug/pages/therapy.pug
@@ -3,8 +3,8 @@ extends ../layouts/layout.pug
 block content
 	include ../sections/_header
 	main.main
-		include ../sections/promos/_promo-hygien.pug
-		include ../sections/_steps-working-four-card
+		include ../sections/promos/_promo-therapy.pug
+		include ../sections/_steps-working
 		include ../sections/implantation/_doctors.pug
 		
 		include ../sections/implantation/_before-after.pug
@@ -17,4 +17,4 @@ block content
 	include ../sections/_footer
 
 block variables
-	-var title = "Гигиена";
+	-var title = "Лечение кариеса";
