--- a/src/pug/sections/promos/_promo-orthopedics.pug
+++ b/src/pug/sections/promos/_promo-orthopedics.pug
@@ -29,11 +29,11 @@
 							svg.svg-rarr
 								use(href='./img/sprite.svg#svg-rarr')
 				
-				.rotate-image__group.image-count-1
-					.rotate-image.rotate-image1
-						img(src='./img/rotate/6.webp' width='263' height='288' loading='lazy' alt='img')
-						.flex
-							span.img-logo
+				//- .rotate-image__group.image-count-1
+				//- 	.rotate-image.rotate-image1
+				//- 		img(src='./img/rotate/6.webp' width='263' height='288' loading='lazy' alt='img')
+				//- 		.flex
+				//- 			span.img-logo
 					
 					
 				.promo-product-cards
@@ -41,7 +41,7 @@
 					.product-card
 						.product-card__top
 							.flex
-								.product-card__col
+								.product-card__img
 									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
 									.product-card__title Протез Акри-Фри
@@ -54,7 +54,7 @@
 					.product-card
 						.product-card__top
 							.flex
-								.product-card__col
+								.product-card__img
 									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
 									.product-card__title Протез Акри-Фри
@@ -67,7 +67,7 @@
 					.product-card
 						.product-card__top
 							.flex
-								.product-card__col
+								.product-card__img
 									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
 									.product-card__title Протез Акри-Фри
@@ -80,7 +80,7 @@
 					.product-card
 						.product-card__top
 							.flex
-								.product-card__col
+								.product-card__img
 									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
 									.product-card__title Протез Акри-Фри
