--- a/src/pug/sections/promos/_promo-surgery.pug
+++ b/src/pug/sections/promos/_promo-surgery.pug
@@ -45,7 +45,7 @@
 					.product-card
 						.product-card__top
 							.flex
-								.product-card__col
+								.product-card__img
 									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
 									.product-card__title Консультация врача
@@ -58,7 +58,7 @@
 					.product-card
 						.product-card__top
 							.flex
-								.product-card__col
+								.product-card__img
 									img(src='./img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
 									.product-card__title Удаление<br>зуба
