--- a/src/pug/sections/promos/_promo-therapy.pug
+++ b/src/pug/sections/promos/_promo-therapy.pug
@@ -13,11 +13,11 @@
 		.container
 			.promo-special-grid
 				.promo-special-text
-					h1.title-36.txt-upper Профессиональная гигиена полости рта
+					h1.title-36 Протезирование зубов коронками
 					.promo-subtitle
-						p Врачи экспертного уровня
-						p За 9 лет установили более 30 000 имплантатов
-						p Помогаем в сложных случаях
+						p Изготавливаем коронки в срок от 1 дня
+						p Гарантируем эстетичный и долговечный результат
+						p Используем все виды материалов и конструкций
 						
 					.text-card
 						p.txt-primary Ближайшее время для записи на консультацию
@@ -29,57 +29,64 @@
 							svg.svg-rarr
 								use(href='./img/sprite.svg#svg-rarr')
 				
-				.rotate-image__group.image-count-2
-					.rotate-image.rotate-image1
-						img(src='./img/rotate/13.webp' width='263' height='288' loading='lazy' alt='img')
-						.flex
-							span.img-logo
-							
-					.rotate-image.rotate-image2
-						img(src='./img/rotate/14.webp' width='263' height='288' loading='lazy' alt='img')
-						.flex
-							span.img-logo
-					
+				
 				.promo-product-cards
 					//card
-					.product-card.product-card--short
+					.product-card
 						.product-card__top
 							.flex
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
+									.product-card__title Ортопантомограмма
+									.time-element 30 минут 
+									.time-element 30 минут 
+							p (с учетом анестезии, удаления зуба, наложения швов)
 						
 						.product-card__price
-							p 99 500 &#8381;
+							p 1 400 &#8381;
 					//card
-					.product-card.product-card--short
+					.product-card
 						.product-card__top
 							.flex
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
+									.product-card__title 3D Компьютерная томография ( 1 челюсть)
+									
+							.time-element 30 минут 
+							.time-element 30 минут 
 						
 						.product-card__price
-							p 99 500 &#8381;
+							p 1 800 &#8381;
 					//card
-					.product-card.product-card--short
+					.product-card
 						.product-card__top
 							.flex
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
+									.product-card__title 3D Компьютерная томография ( 2 челюсти)
+									
+							.time-element 30 минут 
+							.time-element 30 минут 
 						
 						.product-card__price
-							p 99 500 &#8381;
-							.txt-primary
-								span 8 300 ₽ / мес
-								span 0% / 1 год
+							p 2 500 &#8381;
+					//card
+					.product-card
+						.product-card__top
+							.flex
+								.product-card__img
+									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
+								.product-card__col
+									.product-card__title 3D Компьютерная томография ( 2 челюсти+ гайморовы пазухи)
+									
+							.time-element 30 минут 
+							.time-element 30 минут 
+						
+						.product-card__price
+							p 2 500 &#8381;
 					
 	//bottom row
 	.promo-bottom.flex
