--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -87,7 +87,7 @@ html(lang="ru")
 				.product-card.product-card--short
 					.product-card__top
 						.flex
-							.product-card__col
+							.product-card__img
 								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 							.product-card__col
 								.product-card__title Протез Акри-Фри
@@ -99,7 +99,7 @@ html(lang="ru")
 				.product-card.product-card--short
 					.product-card__top
 						.flex
-							.product-card__col
+							.product-card__img
 								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 							.product-card__col
 								.product-card__title Протез Акри-Фри
@@ -111,7 +111,7 @@ html(lang="ru")
 				.product-card.product-card--short
 					.product-card__top
 						.flex
-							.product-card__col
+							.product-card__img
 								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 							.product-card__col
 								.product-card__title Протез Акри-Фри
@@ -123,7 +123,7 @@ html(lang="ru")
 				.product-card
 					.product-card__top
 						.flex
-							.product-card__col
+							.product-card__img
 								img(src='../img/service/serv1.svg'  width='70' height='73' loading='lazy' alt='img')
 							.product-card__col
 								.product-card__title Протез Акри-Фри
@@ -136,7 +136,7 @@ html(lang="ru")
 				.product-card
 					.product-card__top
 						.flex
-							.product-card__col
+							.product-card__img
 								img(src='../img/service/serv1.svg'  width='70' height='72' loading='lazy' alt='img')
 							.product-card__col
 								.product-card__title Протез Акри-Фри
