--- a/src/pug/sections/promos/_promo-whitening.pug
+++ b/src/pug/sections/promos/_promo-whitening.pug
@@ -13,11 +13,11 @@
 		.container
 			.promo-special-grid
 				.promo-special-text
-					h1.title-36.txt-upper Профессиональная гигиена полости рта
+					h1.title-36 Эффективное и безопасное отбеливание зубов
 					.promo-subtitle
-						p Врачи экспертного уровня
-						p За 9 лет установили более 30 000 имплантатов
-						p Помогаем в сложных случаях
+						p Эффективное отбеливание до 8 тонов за 1 сеанс
+						p Безопасно для эмали и мягких тканей
+						p Безболезненная процедура
 						
 					.text-card
 						p.txt-primary Ближайшее время для записи на консультацию
@@ -31,53 +31,40 @@
 				
 				.rotate-image__group.image-count-2
 					.rotate-image.rotate-image1
-						img(src='./img/rotate/13.webp' width='263' height='288' loading='lazy' alt='img')
+						img(src='./img/rotate/15.webp' width='263' height='288' loading='lazy' alt='img')
 						.flex
 							span.img-logo
 							
 					.rotate-image.rotate-image2
-						img(src='./img/rotate/14.webp' width='263' height='288' loading='lazy' alt='img')
+						img(src='./img/rotate/16.webp' width='263' height='288' loading='lazy' alt='img')
 						.flex
 							span.img-logo
 					
 				.promo-product-cards
 					//card
-					.product-card.product-card--short
+					.product-card
 						.product-card__top
 							.flex
+								.product-card__img
+									img(src='../img/service/serv12.svg'  width='70' height='72' loading='lazy' alt='img')
 								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
-								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
+									.product-card__title Отбеливание Opalescence
+									.time-element 30 минут 
+							p Что входит в процедуру:
+							ol
+								li с учетом анестезии, удаления зуба, удаления зуба, 
+								li наложения швов
+								li наложения швов
+								li наложения швов
 						
 						.product-card__price
-							p 99 500 &#8381;
-					//card
-					.product-card.product-card--short
-						.product-card__top
-							.flex
-								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
-								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
+							p 3 000 &#8381;
+							
+
+					.bonus-card.flex
+						img(src='../img/service/serv10.svg'  width='70' height='73' loading='lazy' alt='img')
+						.product-card__title В подарок идет зубной набор 
 						
-						.product-card__price
-							p 99 500 &#8381;
-					//card
-					.product-card.product-card--short
-						.product-card__top
-							.flex
-								.product-card__col
-									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
-								.product-card__col
-									.product-card__title ASTRA<br>TECH
-									.time-element 1,5ч 
-						
-						.product-card__price
-							p 99 500 &#8381;
-					
 	//bottom row
 	.promo-bottom.flex
 		.container
