--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -66,11 +66,11 @@ footer.footer
 						li
 							a(href="#!") Диагностика
 						li
-							a(href="#!") Терапия
+							a(href="therapy.html") Терапия
 						li
 							a(href="implantation.html") Имплантология
 						li
-							a(href="#!") Несъемное протезирование
+							a(href="orthopedics.html") Несъемное протезирование
 						li
 							a(href="#!") Эстетическая стоматология
 						li
@@ -110,4 +110,4 @@ footer.footer
 				.politic-link
 					a(href="#!") ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ
 				.savov-link
-					a(href="#!").savov-link ДЕЗАЙН БЮРО – SAVOV
+					a(href="savov.ru").savov-link ДЕЗАЙН БЮРО – SAVOV
