--- a/src/pug/sections/promos/_promo-3d.pug
+++ b/src/pug/sections/promos/_promo-3d.pug
@@ -13,7 +13,7 @@
 		.container
 			.promo-special-grid
 				.promo-special-text
-					h1.title-36 Лечение<br>кариеса
+					h1.title-36 Протезирование зубов коронками
 					.promo-subtitle
 						p Изготавливаем коронки в срок от 1 дня
 						p Гарантируем эстетичный и долговечный результат
@@ -38,13 +38,13 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title Лечение поверхностного кариеса
-							.time-element 30 минут
-							p 30 минут
-							
+									.product-card__title Ортопантомограмма
+									.time-element 30 минут 
+									.time-element 30 минут 
+							p (с учетом анестезии, удаления зуба, наложения швов)
 						
 						.product-card__price
-							p 2 500 &#8381;
+							p 1 400 &#8381;
 					//card
 					.product-card
 						.product-card__top
@@ -52,10 +52,10 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title Лечение<br>среднего кариеса
-							p 30 минут 
-							.time-element 30 минут
-							 
+									.product-card__title 3D Компьютерная томография ( 1 челюсть)
+									
+							.time-element 30 минут 
+							.time-element 30 минут 
 						
 						.product-card__price
 							p 1 800 &#8381;
@@ -66,10 +66,10 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title Лечение<br>глубокого<br>кариеса
-							.time-element 30 минут
-							.time-element 30 минут
-							
+									.product-card__title 3D Компьютерная томография ( 2 челюсти)
+									
+							.time-element 30 минут 
+							.time-element 30 минут 
 						
 						.product-card__price
 							p 2 500 &#8381;
@@ -80,8 +80,9 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title Эстетическая реставрация передней группы зубов
-							.time-element 30 минут
+									.product-card__title 3D Компьютерная томография ( 2 челюсти+ гайморовы пазухи)
+									
+							.time-element 30 минут 
 							.time-element 30 минут 
 						
 						.product-card__price
