--- a/src/pug/pages/implantation.pug
+++ b/src/pug/pages/implantation.pug
@@ -4,7 +4,7 @@ block content
 	include ../sections/_header
 	main.main
 		include ../sections/implantation/_promo.pug
-		include ../sections/_steps
+		include ../sections/_steps-working
 		include ../sections/implantation/_doctors.pug
 		
 		include ../sections/implantation/_before-after.pug
