--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,6 +18,9 @@ block content
 			a(href="hygiene.html") Гигиена
 			a(href="surgery.html") Хирургия
 			a(href="orthopedics.html") Ортопедия
+			a(href="whitening.html") Отбеливание
+			a(href="3d.html") 3d томография
+			a(href="therapy.html") Лечение кариеса
 			a(href="contacts.html") Контакты
 
 block variables
