--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -64,7 +64,7 @@ footer.footer
 					.footer-nav__title Лечение
 					ul.footer-nav__list
 						li
-							a(href="#!") Диагностика
+							a(href="therapy.html") Диагностика
 						li
 							a(href="therapy.html") Терапия
 						li
@@ -72,17 +72,17 @@ footer.footer
 						li
 							a(href="orthopedics.html") Несъемное протезирование
 						li
-							a(href="#!") Эстетическая стоматология
+							a(href="3d.html") Эстетическая стоматология
 						li
 							a(href="whitening.html") Отбеливание зубов
 						li
-							a(href="#!") Ортодонтия
+							a(href="3d.html") Ортодонтия
 						li
 							a(href="surgery.html") Хирургия
 						li
 							a(href="orthopedics.html") Ортопедия
 						li
-							a(href="#!") Съемное протезирование
+							a(href="orthopedics.html") Съемное протезирование
 						li
 							a(href="hygiene.html") Профилактика и гигиена
 				//MENU LIST
