--- a/src/pug/sections/_steps-working.pug
+++ b/src/pug/sections/_steps-working.pug
@@ -40,23 +40,23 @@ section.steps.working-steps
 					.step__desk
 						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
-				//- .swiper-slide.step-card.step-card--work
-				//- 	.step-card__top.flex
-				//- 		span.step__num 04
-				//- 		span.step-card__name Диагностика
-				//- 	.step__img
-				//- 		img(src='./img/steps/4.webp', srcset='./img/steps/4@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-				//- 	.step__desk
-				//- 		p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
+				.swiper-slide.step-card.step-card--work
+					.step-card__top.flex
+						span.step__num 04
+						span.step-card__name Диагностика
+					.step__img
+						img(src='./img/steps/4.webp', srcset='./img/steps/4@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
+					.step__desk
+						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 				
-				//- .swiper-slide.step-card.step-card--work
-				//- 	.step-card__top.flex
-				//- 		span.step__num 05
-				//- 		span.step-card__name Диагностика
-				//- 	.step__img
-				//- 		img(src='./img/steps/5.webp', srcset='./img/steps/5@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
-				//- 	.step__desk
-				//- 		p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
+				.swiper-slide.step-card.step-card--work
+					.step-card__top.flex
+						span.step__num 05
+						span.step-card__name Диагностика
+					.step__img
+						img(src='./img/steps/5.webp', srcset='./img/steps/5@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
+					.step__desk
+						p Лечение зубов всегда начинается с комплексной диагностики, позволяющей поставить точный диагноз, установить причины, приведшие к появлению той или иной проблемы с зубами, и выбрать эффективную технологию ее устранения.
 			
 			//slider nav
 			.steps-slider-nav
