--- a/src/pug/sections/promos/_promo-3d.pug
+++ b/src/pug/sections/promos/_promo-3d.pug
@@ -13,7 +13,7 @@
 		.container
 			.promo-special-grid
 				.promo-special-text
-					h1.title-36 Протезирование зубов коронками
+					h1.title-36 3D Компьютерная томография
 					.promo-subtitle
 						p Изготавливаем коронки в срок от 1 дня
 						p Гарантируем эстетичный и долговечный результат
@@ -52,7 +52,7 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title 3D Компьютерная томография ( 1 челюсть)
+									.product-card__title 3D Компьютерная томография (1 челюсть)
 									
 							.time-element 30 минут 
 							.time-element 30 минут 
@@ -66,7 +66,7 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title 3D Компьютерная томография ( 2 челюсти)
+									.product-card__title 3D Компьютерная томография (2 челюсти)
 									
 							.time-element 30 минут 
 							.time-element 30 минут 
@@ -80,7 +80,7 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title 3D Компьютерная томография ( 2 челюсти+ гайморовы пазухи)
+									.product-card__title 3D Компьютерная томография (2 челюсти+ гайморовы пазухи)
 									
 							.time-element 30 минут 
 							.time-element 30 минут 
