--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -96,7 +96,7 @@ footer.footer
 						li
 							a(href="before_after.html") до / после 
 						li
-							a(href="#!") Отзывы
+							a(href="review.html") Отзывы
 						li
 							a(href="blog.html") блог
 						li
