--- a/src/pug/pages/therapy.pug
+++ b/src/pug/pages/therapy.pug
@@ -41,6 +41,13 @@ block content
 							.step__img
 								img(src='./img/steps/7.webp', srcset='./img/steps/7@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 							.step__title Реминерализация эмали
+		
+					//slider nav
+					.steps-slider-nav
+						.steps-slider-pagination
+						button.steps-slider-next.arrow-next
+							svg.svg-rarr
+								use(href='./img/sprite.svg#svg-rarr')
 		include ../sections/implantation/_doctors.pug
 		
 		include ../sections/implantation/_before-after.pug
