--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -66,23 +66,23 @@ footer.footer
 						li
 							a(href="therapy.html") Диагностика
 						li
-							a(href="therapy.html") Терапия
+							a(href="orthopedics.html") Терапия
 						li
 							a(href="implantation.html") Имплантология
 						li
-							a(href="orthopedics.html") Несъемное протезирование
+							a(href="3d.html") Несъемное протезирование
 						li
-							a(href="3d.html") Эстетическая стоматология
+							a(href="hygiene.html") Эстетическая стоматология
 						li
 							a(href="whitening.html") Отбеливание зубов
 						li
-							a(href="3d.html") Ортодонтия
+							a(href="surgery.html") Ортодонтия
 						li
 							a(href="surgery.html") Хирургия
 						li
 							a(href="orthopedics.html") Ортопедия
 						li
-							a(href="orthopedics.html") Съемное протезирование
+							a(href="3d.html") Съемное протезирование
 						li
 							a(href="hygiene.html") Профилактика и гигиена
 				//MENU LIST
