--- a/src/pug/sections/doctors/_content.pug
+++ b/src/pug/sections/doctors/_content.pug
@@ -68,7 +68,7 @@ mixin doctorCrad(img, name,txt, num)
 							svg.svg-play
 								use(href='./img/sprite.svg#svg-play')
 					
-					button.btn-primary.pro-doct-btn
+					a(href="https://prodoctorov.ru/").btn-primary.pro-doct-btn
 						span ПроДокторов
 						img(src='./img/icons/pro-doct.webp'  width='24' height='24' loading='lazy' alt='img')
 
@@ -174,7 +174,7 @@ section.doctors.pb-110
 									svg.svg-play
 										use(href='./img/sprite.svg#svg-play')
 							
-							button.btn-primary.pro-doct-btn
+							a(href="https://prodoctorov.ru/").btn-primary.pro-doct-btn
 								span ПроДокторов
 								img(src='./img/icons/pro-doct.webp'  width='24' height='24' loading='lazy' alt='img')
 			//Card
