--- a/src/pug/sections/_service-page-content.pug
+++ b/src/pug/sections/_service-page-content.pug
@@ -30,17 +30,17 @@ section.service.pt-20
 				p Широкий спектр услуг. Стоматология Newlinedent предлагает полный цикл услуг, начиная от профессионального отбеливания зубов и заканчивая имплантацией всего зубного ряда под ключ.
 			.service-content-grid.flex
 				.service-content__column
-					+servCard(1, 'Консультация и диагностика')
-					+servCard(2, 'Онлайн консультация')
+					+servCard(1, 'Консультация и диагностика','Хирургическое лечение и удаление зубов','therapy.html' )
+					+servCard(2, 'Онлайн консультация','Хирургическое лечение и удаление зубов','hygiene.html')
 					+servCard(3, 'Имплантация зубов', 'Все виды имплантации и сопутствующие операции по костной пластике', 'implantation.html')
-					+servCard(4, 'Имплантация All-on-4,<br>All-on-6', 'Все виды имплантации и сопутствующие операции по костной пластике')
-					+servCard(5, 'Удаление зубов','surgery.html')
-					+servCard(6, 'Пародонтология', 'Решение проблем с дёснами')
+					+servCard(4, 'Имплантация All-on-4,<br>All-on-6', 'Все виды имплантации и сопутствующие операции по костной пластике','implantation.html')
+					+servCard(5, 'Удаление зубов','Хирургическое лечение и удаление зубов','surgery.html')
+					+servCard(6, 'Пародонтология', 'Решение проблем с дёснами','3d.html')
 				
 				.service-content__column
-					+servCard(7, 'Терапия','Все виды лечения при зубных болях и незначительных повреждениях зубов.', ' therapy.html')
+					+servCard(7, 'Терапия','Все виды лечения при зубных болях и незначительных повреждениях зубов.', 'therapy.html')
 					+servCard(8, 'Ортопедия', 'Все виды протезирования зубов - коронками, винирами, съемное и т.д.','orthopedics.html')
-					+servCard(9, 'Ортодонтия', 'Исправление прикуса брекетами, каппами и пластинками.')
+					+servCard(9, 'Ортодонтия', 'Исправление прикуса брекетами, каппами и пластинками.','surgery.html')
 					+servCard(10, 'Гигиена', 'Профилактическая стоматология и отбеливание зубов','hygiene.html')
 					+servCard(11, 'Отбеливание ', 'Профилактическая стоматология и отбеливание зубов','whitening.html')
-					+servCard(12, 'Седация', 'Профилактическая стоматология и отбеливание зубов')
+					+servCard(12, 'Седация', 'Профилактическая стоматология и отбеливание зубов','whitening.html')
