--- a/src/pug/sections/blog/_blog-content.pug
+++ b/src/pug/sections/blog/_blog-content.pug
@@ -32,12 +32,13 @@ section.blog-content
 			.tabs__content-container
 				//TAB #1
 				.tabs-content.active(data-tcontent="all")
-					+blogCard
-					+blogCard
-					+blogCard
-					+blogCard
-					+blogCard
-					+blogCard
+					.blog-cards-wrapper
+						+blogCard
+						+blogCard
+						+blogCard
+						+blogCard
+						+blogCard
+						+blogCard
 					//FEEDBACK
 					.feedback__content.flex.p-block-80
 						.feedback__txt
@@ -71,11 +72,11 @@ section.blog-content
 										svg.svg-rarr
 											use(href='./img/sprite.svg#svg-rarr')
 									p.agree-txt Нажимая на кнопку «Отправить», я даю согласие на обработку персональных данных
-
-					//CARDS
-					+blogCard
-					+blogCard
-					+blogCard
+					.blog-cards-wrapper
+						//CARDS
+						+blogCard
+						+blogCard
+						+blogCard
 
 					.tabs-content__footer.flex
 						a(href="#!").btn-primary.sm-100 Показать больше
