--- a/src/pug/sections/promos/_promo-3d.pug
+++ b/src/pug/sections/promos/_promo-3d.pug
@@ -38,7 +38,8 @@
 								.product-card__img
 									img(src='./img/service/serv12.svg'  width='70' height='73' loading='lazy' alt='img')
 								.product-card__col
-									.product-card__title Ортопантомограмма
+									//Добавила в середину слова символ переноса, так как на экранах в 375 слово не помещается
+									.product-card__title Орто&shy;пантомограмма
 									.time-element 30 минут 
 									.time-element 30 минут 
 							p (с учетом анестезии, удаления зуба, наложения швов)
